background_color_change

--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 
 <title>Zeeshan Bhatti's Resume Page</title>
 
-<style>
-main {
-    background-color: slategray; 
-    padding: 4px;
-}
+<link rel="stylesheet"
+href="styles.css">  
 
-h1,h2 {
-    color: blue;
-}
-</style>
+</link>
 </head>
     
 </body>
