--- a/project.html
+++ b/project.html
@@ -68,9 +68,17 @@
             construct net zero mixed use developments which offer affordable rent-to-own housing units and commercial spaces for cooperative businesses, along with wrap-around services including workforce development programs, ESL courses & pathways to family-supporting careers.
           </p></section>
           <section><h2>The Why</h2>
-          <p></p></section>
+          <p>
+            This project aims to play a role in addressing this housing gap by offering rent-to-own housing units to resettled refugees in the Louisville area. 
+            Climate change is no longer a future tense reality and given the fact that cities around the world consume approximately 75% of all globally generated power and produce approximately 70% of all anthropogenic GHG emissions, it is in cities where humanity will be most acutely under pressure to address climate change. 
+            The second aim of this project is to accelerate the adoption of residential and commercial solar energy.            
+          </p></section>
           <section<h2>The How</h2>
-          <p></p></section>
+          <p>
+            2508 Portland Ave. is a proposed 10,000 sq. ft. mixed use development. 
+            The 3,000 sq. ft. ground floor will consist of 2 ground floor retail spaces (1,500 sq. ft. each).
+            The 7,000 sq. ft. second floor will consist of 2 one-bedroom residential units (1,000 sq. ft. each) & 3 two-bedroom residential units (1,700 sq. ft. each).            
+          </p></section>
         </div>
       </div>
     
